Fixed overflowing text

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -65,6 +65,7 @@ a {
 p {
     font-size: 1.2rem;
     line-height: 1.6rem;
+    overflow: auto;
 }
 
 p + p {
